Android accessibility: skip the root element when it has no title

By default when a node is focusable it's always interesting (meaning we
always land on it in sequential navigation) and we try to get its text
from contents if it doesn't have a name (so that something is announced
when you land on it). Make an exception for the root element, because
landing on a WebView and having it read the entire text is too verbose
and confusing.

BUG=660090

Review-Url: https://codereview.chromium.org/2469383002
Cr-Commit-Position: refs/heads/master@{#432621}

Former-commit-id: cf18133784e2e5d324c09b99a6b142874e609364